feat: reach geometry + misc tests
